<resources>
    <string name="app_name">ACM_VIT_Hackathon</string>
    <string name="title_search">Search Item</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="title_scan_list">Scan List</string>
    <string name="title_start_shopping">Start Shopping</string>
    <string name="title_featured">Featured Websites</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip"></string>
    <string name="start">GOT IT</string>
</resources>