<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_shopping_list"
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="@string/title_shopping_list" />

    <item
        android:id="@+id/navigation_featured"
        android:icon="@drawable/ic_baseline_web_24"
        android:title="@string/title_featured" />

    <item
        android:id="@+id/navigation_scan_list"
        android:icon="@drawable/ic_baseline_scanner_24"
        android:title="@string/title_scan_list" />

    <item
        android:id="@+id/navigation_start_shopping"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_start_shopping" />



</menu>